klipper: guard against empty selection event

BUG: 487843
FIXED-IN: 6.1